tests/ui/linkage-attr/raw-dylib/windows/link-ordinal-too-many-arguments.stderr
error[E0805]: malformed `link_ordinal` attribute input
  --> $DIR/link-ordinal-too-many-arguments.rs:3:5
   |
LL |     #[link_ordinal(3, 4)]
   |     ^^^^^^^^^^^^^^------^
   |                   |
   |                   expected a single argument here
   |
   = note: for more information, visit <https://doc.rust-lang.org/reference/items/external-blocks.html#the-link_ordinal-attribute>
help: must be of the form
   |
LL -     #[link_ordinal(3, 4)]
LL +     #[link_ordinal(ordinal)]
   |

error[E0805]: malformed `link_ordinal` attribute input
  --> $DIR/link-ordinal-too-many-arguments.rs:8:5
   |
LL |     #[link_ordinal(3, 4)]
   |     ^^^^^^^^^^^^^^------^
   |                   |
   |                   expected a single argument here
   |
   = note: for more information, visit <https://doc.rust-lang.org/reference/items/external-blocks.html#the-link_ordinal-attribute>
help: must be of the form
   |
LL -     #[link_ordinal(3, 4)]
LL +     #[link_ordinal(ordinal)]
   |

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0805`.
